--- a/index.html
+++ b/index.html
@@ -4,89 +4,157 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Лабораторні роботи — Кузьміна Ксенія</title>
-  <!-- Bootstrap 5 CSS -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
+    :root {
+      --bg: #09061a;
+      --card-bg: rgba(20, 15, 45, 0.75);
+      --neon-blue: #00f0ff;
+      --neon-purple: #b967ff;
+      --text: #ffffff;
+      --btn: #6e00ff;
+      --btn-hover: #9d4edd;
+    }
+
     body {
-      background: #0d0d1a;
-      color: #e0e0ff;
-      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #070415, #120b30);
+      color: var(--text);
+      font-family: 'Poppins', sans-serif;
+      min-height: 100vh;
+      padding: 2.5rem 1rem;
+      overflow-x: hidden;
     }
-    .card {
-      background: #1a1a2e;
-      border: 1px solid #3a3a6e;
-      border-radius: 15px;
-      transition: transform 0.3s, box-shadow 0.3s;
+
+    .header {
+      text-align: center;
+      margin-bottom: 2.8rem;
     }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(106, 45, 190, 0.4);
+
+    .header h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3rem;
+      font-weight: 700;
+      letter-spacing: 1.5px;
+      background: linear-gradient(90deg, var(--neon-blue), var(--neon-purple));
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      text-shadow: 0 0 15px rgba(185, 103, 255, 0.5);
+      margin-bottom: 0.6rem;
+      animation: glowText 2s ease-in-out infinite alternate;
     }
-    .card-title {
-      color: #4fc3f7;
+
+    .header p {
+      color: rgba(255, 255, 255, 0.75);
+      font-size: 1.15rem;
     }
-    .btn-app {
-      background: #293256;
-      color: #a0f0ff;
-      border: 1px solid #4fc3f7;
+
+    .lab-card {
+      background: var(--card-bg);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border-radius: 20px;
+      padding: 1.75rem;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      transition: all 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+      border: 1px solid rgba(185, 103, 255, 0.2);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
+    }
+
+    .lab-card:hover {
+      transform: translateY(-10px) scale(1.02);
+      box-shadow: 0 12px 40px rgba(110, 0, 255, 0.5);
+      border-color: var(--neon-purple);
+    }
+
+    .lab-card h2 {
+      font-size: 1.4rem;
+      color: var(--neon-blue);
+      margin-bottom: 0.9rem;
       font-weight: 600;
     }
-    .btn-app:hover {
-      background: #3a4270;
-      color: white;
+
+    .lab-card p {
+      color: rgba(255, 255, 255, 0.85);
+      font-size: 0.95rem;
+      margin-bottom: 1.4rem;
+      line-height: 1.5;
+      flex-grow: 1;
     }
-    h1 {
-      color: #4fc3f7;
-      text-shadow: 0 0 12px rgba(79, 195, 247, 0.6);
-      margin-bottom: 2rem;
+
+    .btn-lab {
+      background: var(--btn);
+      color: white;
+      border: none;
+      padding: 0.75rem 1.4rem;
+      border-radius: 14px;
+      font-weight: 600;
+      font-size: 1.05rem;
+      transition: all 0.3s ease;
+      text-decoration: none;
+      display: inline-block;
+      text-align: center;
+      box-shadow: 0 0 12px rgba(110, 0, 255, 0.4);
+    }
+
+    .btn-lab:hover {
+      background: var(--btn-hover);
+      transform: scale(1.05);
+      box-shadow: 0 0 20px rgba(185, 103, 255, 0.7);
+    }
+
+    @keyframes glowText {
+      from { text-shadow: 0 0 10px rgba(0, 240, 255, 0.7), 0 0 20px rgba(0, 240, 255, 0.4); }
+      to { text-shadow: 0 0 18px rgba(185, 103, 255, 0.9), 0 0 35px rgba(185, 103, 255, 0.6); }
+    }
+
+    @media (max-width: 576px) {
+      .header h1 { font-size: 2.2rem; }
+      .lab-card { padding: 1.25rem; }
     }
   </style>
 </head>
 <body>
-  <div class="container py-5">
-    <h1 class="text-center">Лабораторні роботи з Frontend-розробки</h1>
-    <p class="text-center mb-4">Студентки Ксенії Кузьміної, група 201</p>
+  <div class="container">
+    <div class="header">
+      <h1>КУЗЬМІНА КСЕНІЯ - Група 201</h1>
+      <p>Лабораторні роботи з Frontend-розробки </p>
+    </div>
 
     <div class="row g-4">
-      <!-- ЛР7 -->
       <div class="col-12 col-md-6">
-        <div class="card p-4 h-100">
-          <h2 class="card-title">ЛР №7 — Магічна куля</h2>
-          <p class="card-text">Динамічна вебсторінка, створена лише через JavaScript.</p>
-          <a href="https://kxnvpr.github.io/laba7.github.io/" class="btn btn-app" target="_blank">Відкрити</a>
+        <div class="lab-card">
+          <h2>ЛР №7 — Магічна куля</h2>
+          <p>Динамічна вебсторінка з валідацією запитань та випадковими відповідями.</p>
+          <a href="https://kxnvpr.github.io/laba7.github.io/" class="btn-lab" target="_blank">Відкрити</a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6">
+        <div class="lab-card">
+          <h2>ЛР №8 — Хто більше?</h2>
+          <p>Гра користувача проти комп’ютера: 3 перемоги — перемога в грі.</p>
+          <a href="https://kxnvpr.github.io/lr8.github.io/" class="btn-lab" target="_blank">Відкрити</a>
         </div>
       </div>
 
-      <!-- ЛР8 -->
       <div class="col-12 col-md-6">
-        <div class="card p-4 h-100">
-          <h2 class="card-title">ЛР №8 — Хто більше?</h2>
-          <p class="card-text">Гра «Користувач vs Комп’ютер»: випадкові числа, 3 перемоги.</p>
-          <a href="https://kxnvpr.github.io/lr8.github.io/" class="btn btn-app" target="_blank">Відкрити</a>
+        <div class="lab-card">
+          <h2>ЛР №9 — Гра «21»</h2>
+          <p>Карти, очки, 3 спроби. Хто набере більше — перемагає.</p>
+          <a href="https://kxnvpr.github.io/laba9.github.io/" class="btn-lab" target="_blank">Відкрити</a>
         </div>
       </div>
-
-      <!-- ЛР9 -->
       <div class="col-12 col-md-6">
-        <div class="card p-4 h-100">
-          <h2 class="card-title">ЛР №9 — Гра «21»</h2>
-          <p class="card-text">Карти, рахунок, три спроби. Перемагає той, хто набере більше очок.</p>
-          <a href="https://kxnvpr.github.io/laba9.github.io/" class="btn btn-app" target="_blank">Відкрити</a>
-        </div>
-      </div>
-
-      <!-- ЛР10 -->
-      <div class="col-12 col-md-6">
-        <div class="card p-4 h-100">
-          <h2 class="card-title">ЛР №10 — Однорукий бандит</h2>
-          <p class="card-text">Слот-машина з валідацією імені та виграшем при 3 однакових символах.</p>
-          <a href="https://kxnvpr.github.io/laba10.github.io/" class="btn btn-app" target="_blank">Відкрити</a>
+        <div class="lab-card">
+          <h2>ЛР №10 — Однорукий бандит</h2>
+          <p>Слот-машина з валідацією імені та виграшем при 3 однакових символах.</p>
+          <a href="https://kxnvpr.github.io/laba10.github.io/" class="btn-lab" target="_blank">Відкрити</a>
         </div>
       </div>
     </div>
   </div>
-
-  <!-- Bootstrap 5 JS (optional, for responsiveness) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
